fix top services page spacing issues

--- a/src/Components/ServicesPage/ServicesPage.scss
+++ b/src/Components/ServicesPage/ServicesPage.scss
@@ -9,6 +9,7 @@
 .ServicesPageBGSection {
     width: 100%;
     min-height: 35vh;
+    height: 35vh;
     background-image: url("../../assets/new11.jpg");
     background-position: bottom;
     background-size: cover;
@@ -17,6 +18,7 @@
 .HeaderGrid {
     width: 100%;
     height: 100%;
+    min-height: 100%;
     display: flex;
     align-items: center;
 }
@@ -28,6 +30,7 @@
     color: white;
     width: 100%;
     height: 100%;
+    min-height: 100%;
     background-color: rgba(14,22,24, 0.7);
     filter: grayscale(100%);
     background-position: bottom;
